cmake_minimum_required(VERSION 3.10)

project(p1018)

add_executable(p1018 p1018.cpp)

project(p1021)

add_executable(p1021 p1021.cpp)
project(p1022)

add_executable(p1022 p1022.cpp)
project(p1023)

add_executable(p1023 p1023.cpp)
project(p1024)

add_executable(p1024 p1024.cpp)
project(p1025)

add_executable(p1025 p1025.cpp)
project(p1026)

add_executable(p1026 p1026.cpp)
project(p1027)

add_executable(p1027 p1027.cpp)
project(p1028)

add_executable(p1028 p1028.cpp)
project(p1029)

add_executable(p1029 p1029.cpp)
project(p1030)

add_executable(p1030 p1030.cpp)
project(p1032)

add_executable(p1032 p1032.cpp)
project(p1034)

add_executable(p1034 p1034.cpp)
project(p1035)

add_executable(p1035 p1035.cpp)
project(p1036)

add_executable(p1036 p1036.cpp)
project(p1037)

add_executable(p1037 p1037.cpp)
project(p1040)

add_executable(p1040 p1040.cpp)

install(TARGETS p1018 TARGETS p1021 TARGETS p1022 TARGETS p1023 TARGETS p1024
TARGETS p1025 TARGETS p1026 TARGETS p1027 TARGETS p1028 TARGETS p1029 TARGETS
p1030 TARGETS p1032 TARGETS p1034 TARGETS p1035 TARGETS p1036 TARGETS p1037)
